--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "jquery": "^3.2.1",
     "md5-typescript": "^1.0.0",
     "mongoose": "^4.13.5",
     "multer": "^1.3.0",
     "rand-token": "^0.4.0",
     "rxjs": "^5.4.2",
+    "socket.io": "^2.0.4",
     "ts-md5": "^1.2.2",
     "zone.js": "^0.8.14"
   },
