--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "mongoose": "^4.13.6",
     "multer": "^1.3.0",
     "rand-token": "^0.4.0",
-    "rxjs": "^5.4.2",
+    "rxjs": "^5.5.3",
     "socket.io": "^2.0.4",
     "ts-md5": "^1.2.2",
     "zone.js": "^0.8.14"
@@ -40,7 +40,7 @@
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.92",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
@@ -48,7 +48,7 @@
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
